fix: syntax error

--- a/bin/install
+++ b/bin/install
@@ -180,13 +180,20 @@ function check_installation() {
 
 function post_install() {
   # restore git authentication over ssh
-  [ "$restore_git" == "true" ] && git config --global "url.git@github.com:.insteadOf" "https://github.com/" && echo -e "${I_DONE}restored ==> git authentication over ssh"
-  
-  # cleanup global shell profile
-  [ -f "${ONESETUP}/roles/zsh/files/global_config/profile" ] && [ -f "/etc/profile" ] && sudo rm -f "/etc/profile" && echo -e "${I_DONE}/etc/profile ==> cleanup"
-  # copy global shell profile (/etc/profile)
-  sudo cp "${ONESETUP}/roles/zsh/files/global_config/profile" "/etc/profile" && echo -e "${I_DONE}/etc/profile ==> install"
+  if [ "$restore_git" == "true" ]; then
+    git config --global "url.git@github.com:.insteadOf" "https://github.com/"
+    echo -e "${I_DONE}restored ==> git authentication over ssh"
+  fi
 
+  # cleanup global shell profile
+  if [ -f "${ONESETUP}/roles/zsh/files/global_config/profile" ] && [ -f "/etc/profile" ]; then
+    sudo rm -f "/etc/profile"
+    echo -e "${I_DONE}/etc/profile ==> cleanup"
+  fi
+
+  # copy global shell profile (/etc/profile)
+  sudo cp "${ONESETUP}/roles/zsh/files/global_config/profile" "/etc/profile"
+  echo -e "${I_DONE}/etc/profile ==> install"
 }
 
 pre_install \
