fix: set ownership to user for /opt/one*

--- a/bin/install
+++ b/bin/install
@@ -153,6 +153,8 @@ function check_installation() {
   [ ! -d "${ONEVAULT}" ] && sudo mkdir -p "${ONEVAULT}" && echo -e "${I_DONE}onevault ==> directory created"
   # /opt/one/onesetup
   [ ! -d "${ONESETUP}" ] && onesetup_dir_exist="false" || onesetup_dir_exist="true"
+  # -- PERMISSIONS -- #
+  sudo chown -R "${USER}" "${ONE}"
   # /opt/one/onevault/onesetup.secret
   if [ -f "${ONEVAULT}/onesetup.secret" ]; then
     sudo chown "$USER" "${ONEVAULT}/onesetup.secret" && sudo chmod 600 "${ONEVAULT}/onesetup.secret"
